Merge stdout and stderr streams to ease processing of Ocarina's output